# Rocket-API-Sandbox

./: .gitignore  contributing.md  readme.md
api_project/: Cargo.toml
api_project/.cargo/: config.toml
api_project/src/: main.rs
api_project/src/data/: db.rs
api_project/src/domains/users/: queries.rs  users.rs
api_project/src/models/users/: entities.rs  form_datas.rs  user.rs
api_project/src/web/: mod.rs
api_project/src/web/endpoints/: mapper.rs
api_project/src/web/routes/: index.rs  users.rs
leptos_project/: Cargo.toml
leptos_project/src/: main.rs
rust_htmx_tera_project/: Cargo.toml
rust_htmx_tera_project/src/: handlers.rs  main.rs
rust_htmx_tera_project/src/domains/: mod.rs
rust_htmx_tera_project/src/domains/users/: commands.rs  queries.rs
rust_htmx_tera_project/src/handlers/: mod.rs  utilities.rs
rust_htmx_tera_project/src/handlers/about/: index.rs
rust_htmx_tera_project/src/handlers/contact/: index.rs
rust_htmx_tera_project/src/handlers/home/: add_item.rs  index.rs  remove_item.rs
rust_htmx_tera_project/src/handlers/menu/: index.rs
rust_htmx_tera_project/src/handlers/services/: index.rs
rust_htmx_tera_project/src/models/: mod.rs
rust_htmx_tera_project/src/models/users/: entities.rs  form_datas.rs
rust_htmx_tera_project/templates/: index.html  menu.html
rust_htmx_tera_project/templates/pages/home/: index.html
