[package]
name = "api_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-rustls"] }
tokio = { version = "1", features = ["full"] }
rocket = { version = "0.5.0", features = ["json", "secrets"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["rocket"] }
utoipa = { version = "4.2.0", features = ["rocket_extras"] }
utoipa-redoc = { version = "3.0.0", features = ["rocket"] }
utoipa-rapidoc = { version = "3.0.0", features = ["rocket"] }
env_logger = "0.10.0"
dotenv = "0.15.0"